# motr-spotr

./: .editorconfig  .gitignore  .gitmodules  notes.md  stm32-arm-toolchain.cmake
hardware/openscad/: antanna_clamp.scad
neural/: neural_constants.py
neural/dataset/: binary_reading.py  fft_samples_dataset.py
neural/models/: fft_classifier.py  windows_crops.py
neural/scripts/: samples2image.py
neural/training/: train_detector.py
neural/typing/: sample_types.py
neural/util/: sample_indexing.py
notes/: noise1.xcf  predictions_2metres.xcf
nucleo_adc/: .clang-format  CMakeLists.txt
nucleo_adc/adc_reader/: CMakeLists.txt
nucleo_adc/adc_reader/src/: FixedCirdularQueue.h  MtTaskQueue.h  fft_stuff.cpp  fft_stuff.h  imgui.h  main.cpp
nucleo_adc/nucleo_main/: CMakeLists.txt
nucleo_adc/nucleo_main/src/: main.cpp
nucleo_adc/nucleo_mock/: CMakeLists.txt
nucleo_adc/nucleo_mock/include/mocked/Inc/: main.h
nucleo_adc/nucleo_shared/: CMakeLists.txt
nucleo_adc/nucleo_shared/include/nucleo_shared/: SimpleQueue.h  adc_stream_constants.h  byte_stuff.h
nucleo_adc/reader_lib/: CMakeLists.txt
nucleo_adc/reader_lib/include/reader_lib/: CDCReaderWindows.h
nucleo_adc/reader_lib/src/: CDCReaderWindows.cpp  CDCReaderWindows.h
nucleo_adc/stm32cubemx/nucleo_settings/: .mxproject  CMakeLists.txt  nucleo_settings.ioc  nucleo_settings.txt
nucleo_adc/stm32cubemx/nucleo_settings/Core/Src/: main.c  stm32f4xx_hal_msp.c
nucleo_adc/stm32cubemx/nucleo_settings/USB_DEVICE/App/: usbd_cdc_if.c
nucleo_adc/stm32cubemx/nucleo_settings/cmake/stm32cubemx/: CMakeLists.txt
nucleo_adc/tpc/args/: CMakeLists.txt
nucleo_adc/tpc/imgui/: CMakeLists.txt
nucleo_adc/tpc/implot/: CMakeLists.txt
recording/obs/: clock.html  commit_recording.py  frame_timestamps.py  recording_constants.py  start_recording.py
tools/: generate_cubemx_calls.py
